--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Jazz Club Network</title>
+    <title>Jazz Bar Network</title>
   </head>
   <body>
     <p>Welcome!</p>
