Jazz Bar Network open

--- a/rules.html
+++ b/rules.html
@@ -3,7 +3,6 @@
 
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>JazzBar.tk Network</title>
 		<link href="styles/main.css" rel="stylesheet" type="text/css"/>
 	</head>
@@ -11,14 +10,16 @@
 	<body>
 		<h1>
 			<img src="images/logo.png" width="300"/><br>
-			Welcome to JazzBar.tk Network!
+			Server Rules
 		</h1>
 		
-		<p>This is an official website of <b>JazzBar.tk</b> Multiplayer Server.</p>
+		<p>1. Please do not valdalize or ruin the server.</p>
+		
+		<p>2. Please treat other players with respect.</p>
 		
 		<h1>Menu</h1>
 		<ul>
-			<li><a href="rules.html">Rules</a></li>
+			<li><a href="index.html">Home</a></li>
 		</ul>
 	</body>
 	
