--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>JazzBar.tk Network</title>
+		<title>Jazz Bar Network</title>
 		<link href="styles/main.css" rel="stylesheet" type="text/css"/>
 	</head>
 	
 	<body>
 		<h1>
 			<img src="images/logo.png" width="300"/><br>
-			Welcome to JazzBar.tk Network!
+			Welcome to Jazz Bar Network!
 		</h1>
 		
-		<p>This is an official website of <b>JazzBar.tk</b> Multiplayer Server.</p>
+		<p>This is an official website of <b>Jazz Bar Network</b> multiplayer platform.</p>
 		
 		<h1>Menu</h1>
 		<ul>
