--- a/rules.html
+++ b/rules.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>JazzBar.tk Network</title>
+		<title>Jazz Bar Network</title>
 		<link href="styles/main.css" rel="stylesheet" type="text/css"/>
 	</head>
 	
