--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		</h1>
 		
 		<p>This is an official website of <b>Jazz Bar Network</b> multiplayer platform.</p>
+
+		<p>The domain for game server is: <b>play.jazzbar.tk</b></p>
 		
 		<h1>Menu</h1>
 		<ul>
