--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		
 		<p>This is an official website of <b>Jazz Bar Network</b> multiplayer platform.</p>
 
-		<p>The domain for game server is: <b>play.jazzbar.tk</b></p>
+		<p>Game Server IP Address: <b>play.jazzbar.tk</b></p>
 		
 		<h1>Menu</h1>
 		<ul>
