--- a/rules.html
+++ b/rules.html
@@ -14,9 +14,11 @@
 			Server Rules
 		</h1>
 		
-		<p>1. Please do not valdalize or ruin the server.</p>
+		<p>1. Please do not vandalize the server.</p>
 		
-		<p>2. Please treat other players with respect.</p>
+		<p>2. Treat other players with respect.</p>
+
+		<p>3. Send an email to <b>sonnykimee@gmail.com</b> for any questions or feedbacks.</p>
 		
 		<h1>Menu</h1>
 		<ul>
