Improved UI layout
1. Added top navigation menu bar
2. Added viewwidth
3. Added neon effect on h2

--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
 	</head>
 	
 	<body>
-		<h1>
-			<img src="images/logo.png" width="300"/><br>
-			Welcome to Jazz Bar Network!
-		</h1>
-		
-		<p>This is an official website of <b>Jazz Bar Network</b> multiplayer platform.</p>
+		<div class="container">
+			<h1>
+				<ul>
+					<li><a class="active" href="index.html">Home</a></li>
+					<li><a class="active" href="rules.html">Rules</a></li>
+				</ul>
 
-		<p>Game Server IP Address: <b>play.jazzbar.tk</b></p>
-		
-		<h1>Menu</h1>
-		<ul>
-			<li><a href="rules.html">Rules</a></li>
-		</ul>
+				<img src="images/logo.png" width="300"/>
+			</h1>
+
+			<h2 class="neonText">
+				Welcome to Jazz Bar Network!
+			</h2>
+			
+			<p>This is an official website of <b>Jazz Bar Network</b> multiplayer platform.</p>
+
+			<p>Game Server IP Address: <b>play.jazzbar.tk</b></p>
+		</div>
 	</body>
 	
 </html>
