--- a/rules.html
+++ b/rules.html
@@ -9,21 +9,26 @@
 	</head>
 	
 	<body>
-		<h1>
-			<img src="images/logo.png" width="300"/><br>
-			Server Rules
-		</h1>
-		
-		<p>1. Please do not vandalize the server.</p>
-		
-		<p>2. Treat other players with respect.</p>
+		<div class="container">
+			<h1>
+				<ul>
+					<li><a class="active" href="index.html">Home</a></li>
+					<li><a class="active" href="rules.html">Rules</a></li>
+				</ul>
+				
+				<img src="images/logo.png" width="300"/>
+			</h1>
 
-		<p>3. Send an email to <b>sonnykimee@gmail.com</b> for any questions or feedbacks.</p>
-		
-		<h1>Menu</h1>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-		</ul>
+			<h2 class="neonText">
+				Server Rules
+			</h2>
+			
+			<p>1. Please do not vandalize the server.</p>
+			
+			<p>2. Treat other players with respect.</p>
+
+			<p>3. Send an email to <b>sonnykimee@gmail.com</b> for any questions or feedbacks.</p>
+		</div>
 	</body>
 	
 </html>
