--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 
+	<!-- Header -->
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,9 @@
 		<link href="styles/main.css" rel="stylesheet" type="text/css"/>
 	</head>
 	
+	<!-- Body -->
 	<body>
+		<!-- Content -->
 		<div class="container">
 			<h1>
 				<ul>
@@ -27,6 +30,8 @@
 
 			<p>Game Server IP Address: <b>play.jazzbar.tk</b></p>
 		</div>
+		<!-- JavaScript -->
+		<script type="text/javascript" src="js/test.js"></script>
 	</body>
 	
 </html>
