--- a/rules.html
+++ b/rules.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 
+	<!-- Head -->
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,9 @@
 		<link href="styles/main.css" rel="stylesheet" type="text/css"/>
 	</head>
 	
+	<!-- Body -->
 	<body>
+		<!-- Content -->
 		<div class="container">
 			<h1>
 				<ul>
