--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		</div>
 		<!-- JavaScript -->
 		<script type="text/javascript" src="js/test.js"></script>
+		<script type="text/javascript" src="js/test2.js"></script>
 	</body>
 	
 </html>
