--- a/servers.html
+++ b/servers.html
@@ -24,14 +24,10 @@
 			</h1>
 
 			<h2>
-				Server Rules
+				List of Servers
 			</h2>
 			
-			<p>1. Please do not vandalize the server.</p>
-			
-			<p>2. Treat other players with respect.</p>
-
-			<p>3. Send an email to <b>sonnykimee@gmail.com</b> for any questions or feedbacks.</p>
+			<p>Download JSON File: <a href="servers.json">servers.json</a></p>
 		</div>
 	</body>
 	
