--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<ul>
 					<li><a class="active" href="index.html">Home</a></li>
 					<li><a class="active" href="rules.html">Rules</a></li>
+					<li><a class="active" href="servers.html">Servers</a></li>
 				</ul>
 
 				<img src="images/logo.png" width="300"/>
