--- a/servers.html
+++ b/servers.html
@@ -27,7 +27,7 @@
 				List of Servers
 			</h2>
 			
-			<p>Download JSON File: <a href="servers.json">servers.json</a></p>
+			<p>Download JSON File: <a href="data_files/servers.json">servers.json</a></p>
 		</div>
 	</body>
 	
