--- a/servers.html
+++ b/servers.html
@@ -33,8 +33,8 @@
 			<table class="table table-stripped" style="width:70%">
 				<tr class="bg-info">
 					<th>Name</th>
-					<th>IP Address</th>
-					<th>Message of the Day</th>
+					<th>IP</th>
+					<th>MOTD</th>
 				</tr>
 					
 				<tbody id="serversTable">
