--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!-- Body -->
 	<body>
 		<!-- Content -->
-		<div class="container">
+		<div class="content">
 			<h1>
 				<ul>
 					<li><a class="active" href="index.html">Home</a></li>
