Replaced jquery to minimum version

--- a/servers.html
+++ b/servers.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Jazz Bar Network</title>
 		<link href="styles/main.css" rel="stylesheet" type="text/css"/>
-		<script src="js/jquery-3.6.0.js"></script>
+		<script src="js/jquery-3.6.0.min.js"></script>
 	</head>
 	
 	<!-- Body -->
