--- a/servers.html
+++ b/servers.html
@@ -70,7 +70,7 @@
 						var row =`
 								<tr>
 									<td>${data[i].name}</td>
-									<td>${data[i].address}</td>
+									<td>${data[i].ip}</td>
 									<td>${data[i].motd}</td>
 								<tr>`;
 
