Changed table js code to JQuery
.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 		<!-- Content -->
 		<div class="content">
 			<h1>
-				<ul>
-					<li><a class="active" href="index.html">Home</a></li>
-					<li><a class="active" href="rules.html">Rules</a></li>
-					<li><a class="active" href="servers.html">Servers</a></li>
-				</ul>
+				<div class="navbar">
+					<ul>
+						<li><a class="active" href="index.html">Home</a></li>
+						<li><a class="active" href="rules.html">Rules</a></li>
+						<li><a class="active" href="servers.html">Servers</a></li>
+					</ul>
+				</div>
 
 				<img src="images/logo.png" width="300"/>
 			</h1>
